--- a/style.css
+++ b/style.css
@@ -16,15 +16,32 @@
 .player-container {
   height: 80%;
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
-.time-select {
-  background: navajowhite;
-}
-.sound-picker {
-  background: lightsalmon;
+.player-container svg {
+  position: absolute;
+  height: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
 }
 
-.player-container {
-  background: lightpink;
+video {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  z-index: -1;
+}
+
+.time-display {
+  position: absolute;
+  bottom: 10%;
+  color: white;
+  font-size: 2em;
 }
